Modify : 사진 삭제 로직 수정